--- a/src/zsFootballRound.scss
+++ b/src/zsFootballRound.scss
@@ -6,23 +6,31 @@
 		font-weight: bold;
 		font-size: 14px;
 	}
-	.zsfootball-match {
+	.zsfootball-match-row {
 		.away-club {
 			font-weight: bold;
 			text-align: left;
-			width: 40%;
+			width: 35%;
 		}
 		.home-club {
 			font-weight: bold;
 			text-align: right;
-			width:40%;
+			width: 35%;
 		}
 		.result {
 			font-weight: inherit;
 			text-align: center;
 			width: 10%;
 		}
-		match-date {
+		.match-date {
+			font-weight: bold;
+			text-align: left;
+			width: 10%;
+
+		}
+		.attendance {
+			font-weight: bold;
+			text-align: right;
 			width: 10%;
 		}
 	}
@@ -30,5 +38,6 @@
 	table.zsfootball-match {
 		background-color: inherit;
 		margin-bottom:0px;
+		width: 100% !important;
 	}
 }
